<resources>
    <string name="app_name">Aro</string>

    <string name="title_activity_video_player">VideoPlayer</string>
    <string name="title_activity_annotation">Questionnaire</string>
    <string name="title_activity_ending">Thank You</string>
    <string name="title_activity_main">Main</string>

    <string name="welcome">Welcome to Aro!</string>
    <string name="enter_information">Please enter your personal information here:</string>
    <string name="user_id">ID</string>
    <string name="age">Age</string>
    <string name="gender">Gender:</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_other">Other</string>
    <string name="start_button_text">Click to Start</string>

    <string name="neutral">😐</string>
    <string name="angry">😠</string>
    <string name="pensive">😔</string>
    <string name="relieved">😌</string>
    <string name="smile">😄</string>

    <string name="classify_your_emotion">Please classify the emotion you felt while watching the video</string>
    <string name="next">Next</string>
    <string name="high_arousal">high arousal</string>
    <string name="low_arousal">low arousal</string>
    <string name="very_positive">very positive</string>
    <string name="very_negative">very negative</string>
    <string name="thank_you">Thank you very much!</string>
    <string name="return_phone">Please give this phone back to the experimenter</string>
    <string name="pre_text">You will now see a short video clip during which you are asked to annotate your emotions. Tap the screen to continue</string>
    <string name="post_text">This is the end of the clip. Tap the screen to continue to the questionnaire to rate your overall experience</string>
</resources>
