<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnnotationActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/annotationConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high_arousal"
            android:textColor="@color/colorAccent"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/seekBar_arousal"
            app:layout_constraintTop_toTopOf="@+id/seekBar_arousal"
            app:layout_constraintStart_toEndOf="@+id/seekBar_arousal" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low_arousal"
            android:textColor="@color/design_default_color_primary"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/seekBar_arousal"
            app:layout_constraintEnd_toStartOf="@+id/seekBar_arousal"
            app:layout_constraintTop_toTopOf="@+id/seekBar_arousal" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/very_positive"
            android:textColor="@color/colorAccent"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/seekBar_valence"
            app:layout_constraintTop_toTopOf="@+id/seekBar_valence"
            app:layout_constraintStart_toEndOf="@+id/seekBar_valence" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/very_negative"
            android:textColor="@color/design_default_color_primary"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/seekBar_valence"
            app:layout_constraintEnd_toStartOf="@+id/seekBar_valence"
            app:layout_constraintTop_toTopOf="@+id/seekBar_valence" />

        <TextView
            android:id="@+id/title_SAM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/classify_your_emotion"
            android:padding="5sp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView_arousal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_SAM"
            app:srcCompat="@mipmap/arousal" />

        <ImageView
            android:id="@+id/imageView_valence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_arousal"
            app:srcCompat="@mipmap/valence" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBar_valence" />

        <SeekBar
            android:id="@+id/seekBar_arousal"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="217dp"
            android:layout_height="21dp"
            android:max="8"
            android:progress="4"
            app:layout_constraintEnd_toEndOf="@+id/imageView_arousal"
            app:layout_constraintStart_toStartOf="@+id/imageView_arousal"
            app:layout_constraintTop_toBottomOf="@+id/imageView_arousal" />

        <SeekBar
            android:id="@+id/seekBar_valence"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="217dp"
            android:layout_height="21dp"
            android:max="8"
            android:progress="4"
            app:layout_constraintEnd_toEndOf="@+id/imageView_valence"
            app:layout_constraintStart_toStartOf="@+id/imageView_valence"
            app:layout_constraintTop_toBottomOf="@+id/imageView_valence" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>
